// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prettier-utils > formatCss > should handle multi-line comments correctly 1`] = `
"/* Container styles */
.container {
  display: flex; /* Flexbox properties */
  flex-direction: column;
  align-items: center;
}
"
`;

exports[`prettier-utils > formatCss > should handle single-line comments correctly 1`] = `
".button {
  background-color: blue; // Button background color
  color: white; // Button text color
  padding: 10px 20px; // Button padding
}
"
`;

exports[`prettier-utils > formatCss > should remove leading and trailing white space in the input string 1`] = `
"body {
  color: red;
}
"
`;

exports[`prettier-utils > formatCss > should return a correctly formatted string when given valid multi-liner CSS code 1`] = `
".container {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.button {
  background-color: blue;
  color: white;
  padding: 10px 20px;
}
"
`;

exports[`prettier-utils > formatCss > should return a correctly formatted string when given valid one-liner CSS code 1`] = `
"body {
  color: red;
}
"
`;

exports[`prettier-utils > formatJsx > should handle multi-line comments correctly 1`] = `
"<div>
  <Button>Hello, World!</Button>
  <Dropdown
    /*dropdown options*/ options={[
      { value: 1, label: "Option 1" },
      { value: 2, label: "Option 2" },
      { value: 3, label: "Option 3" },
    ]}
  />
</div>"
`;

exports[`prettier-utils > formatJsx > should handle single-line comments correctly 1`] = `
"<div>
  <Button>Hello, World!</Button>
  <Dropdown //dropdown options
    options={[
      { value: 1, label: "Option 1" },
      { value: 2, label: "Option 2" },
      { value: 3, label: "Option 3" },
    ]}
  />
</div>"
`;

exports[`prettier-utils > formatJsx > should remove leading and trailing white space in the input string 1`] = `"<div>Hello, World!</div>"`;

exports[`prettier-utils > formatJsx > should return a correctly formatted string when given valid multi-liner JSX code 1`] = `
"<div>
  <Button>Hello, World!</Button>
  <Dropdown
    options={[
      { value: 1, label: "Option 1" },
      { value: 2, label: "Option 2" },
      { value: 3, label: "Option 3" },
    ]}
  />
</div>"
`;

exports[`prettier-utils > formatJsx > should return a correctly formatted string when given valid one-liner JSX code 1`] = `"<div>Hello, World!</div>"`;
